--- a/package.json
+++ b/package.json
@@ -35,13 +35,16 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "typescript": "3.3.3"
+    "nodemon": "^2.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "14.17.6"
   },
   "browserslist": [
     ">0.2%",
