--- a/src/.env
+++ b/src/.env
@@ -7,3 +7,4 @@ MYSQL_DB=heroku_55fab81c2940b2a
 DB_CONNECTION_LIMIT=10
 JSWBTOKEN=mickey135
 SECRET=angelsrock
+REACT_APP_BASE_URL=cintafoodsmenu.herokuapp.com
