--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
         "type": "image/x-icon"
       }
     ],
-    "start_url": ".",
+    "start_url": "https://cintafoodsmenu.herokuapp.com/",
     "display": "standalone",
     "theme_color": "#771f48",
     "background_color": "#512938"
